2009-01-05 12:19 -0800  Brendan Cully  <brendan@kublai.com>  (1cdc8d64b55c)

	* doc/mutt.man: Add pointer to the full manual to the front of mutt.1

2009-01-05 09:16 -0800  Petr Písař  <petr.pisar@atlas.cz>  (990f1e841dd4)

	* po/cs.po: Updated Czech translation

2009-01-04 22:36 -0800  Vincent Lefevre  <vincent@vinc17.org>  (9af288ee9e91)

	* po/fr.po: Updated French translation

2009-01-04 18:32 -0800  Emanuele Giaquinta  <e.giaquinta@glauco.it>  (e47d05dc2633)

	* ChangeLog, imap/util.c: Indentation fix

2009-01-04 18:12 -0800  Brendan Cully  <brendan@kublai.com>  (1947c370fcd9)

	* Makefile.am: Remove obsolete make target

	* doc/manual.xml.head: Update copyright in manual

2009-01-04 17:07 -0800  Vincent Lefevre  <vincent@vinc17.org>  (bbe8694acc33)

	* po/fr.po: Updated French translation

2009-01-04 17:04 -0800  Brendan Cully  <brendan@kublai.com>  (d98ab9a591e5)

	* pgpkey.c: Remove dead code. Thanks to Ingo Schwarze.

	* COPYRIGHT: Update copyrights

	* addrbook.c, ascii.h, attach.c, bcache.c, bcache.h, browser.c,
	browser.h, charset.c, charset.h, commands.c, complete.c,
	compose.c, crypt-gpgme.c, crypt.c, curs_main.c, dotlock.c,
	editmsg.c, enter.c, functions.h, gnupgparse.c, handler.c,
	hdrline.c, hook.c, init.h, lib.c, lib.h, menu.c, mh.c,
	mutt_idna.c, mutt_idna.h, mutt_sasl.h, mutt_socket.c, muttlib.c,
	mx.c, pager.c, pattern.c, pgp.c, pgp.h, pgpinvoke.c, pgpkey.c,
	pgplib.c, pgplib.h, pgppacket.c, pgppubring.c, pop.c, postpone.c,
	protos.h, query.c, recvattach.c, recvcmd.c, remailer.c, rfc1524.c,
	rfc2047.c, rfc2231.c, rfc3676.h, send.c, setenv.c, status.c,
	url.c: Update copyrights. Closes #3016. I went through the logs of
	each file with a copyright header and updated the years for the
	authors in the headers for any non-comment changes they
	introduced. What a pain!

	* imap/auth_anon.c, imap/auth_cram.c, imap/auth_login.c,
	imap/auth_sasl.c, imap/browse.c, imap/imap.h, imap/message.h,
	imap/utf7.c: IMAP copyright header updates
